--- a/SorrisoDaFortuna/SorrisoDaFortuna.csproj
+++ b/SorrisoDaFortuna/SorrisoDaFortuna.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -95,6 +110,53 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormNumBichos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNumBichos.Designer.cs">
+      <DependentUpon>FormNumBichos.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FormNumBichos.resx">
+      <DependentUpon>FormNumBichos.cs</DependentUpon>
+    </EmbeddedResource>
+    <Compile Include="FormDeposito.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDeposito.Designer.cs">
+      <DependentUpon>FormDeposito.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FormDeposito.resx">
+      <DependentUpon>FormDeposito.cs</DependentUpon>
+    </EmbeddedResource>
+    <Compile Include="FormTigrinho.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTigrinho.Designer.cs">
+      <DependentUpon>FormTigrinho.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FormTigrinho.resx">
+      <DependentUpon>FormTigrinho.cs</DependentUpon>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>FormTigrinho1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <Compile Include="FormBicho.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBicho.Designer.cs">
+      <DependentUpon>FormBicho.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FormBicho.resx">
+      <DependentUpon>FormBicho.cs</DependentUpon>
+    </EmbeddedResource>
+    <Compile Include="Form21.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form21.Designer.cs">
+      <DependentUpon>Form21.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Form21.resx">
+      <DependentUpon>Form21.cs</DependentUpon>
+    </EmbeddedResource>
     <Compile Include="BdUtil.cs" />
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
@@ -107,6 +169,11 @@
     </Compile>
     <Compile Include="FormCadastro.Designer.cs">
       <DependentUpon>FormCadastro.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormTigrinho1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FormTigrinho.resx</DependentUpon>
     </Compile>
     <Compile Include="HashUtil.cs" />
     <Compile Include="MainForm.cs">
@@ -150,6 +217,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.2 %28x86 e x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
